--- a/CPSC_411_HW2/app/src/main/res/layout/student_rows.xml
+++ b/CPSC_411_HW2/app/src/main/res/layout/student_rows.xml
@@ -18,7 +18,7 @@
         />
 
     <TextView
-        android:id="@+id/CWID"
+        android:id="@+id/cwid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
