--- a/CPSC_411_HW2/app/src/main/res/layout/activity_student_details.xml
+++ b/CPSC_411_HW2/app/src/main/res/layout/activity_student_details.xml
@@ -54,14 +54,66 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Courses:"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/course_add_button"
+            android:text="Add"></Button>
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnCount="2">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Course ID"
+                android:textSize="24dp"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:gravity="center_horizontal">
+
+            </TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Grade"
+                android:textSize="24dp"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:gravity="center_horizontal">
+            </TextView>
+
+            <EditText
+                android:id="@+id/course_id_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:gravity="center_horizontal" />
+
+            <EditText
+                android:id="@+id/course_grade_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:gravity="center_horizontal" />
+        </GridLayout>
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/course_list_id">
+
+        </ListView>
+
 
     </LinearLayout>
 
