--- a/CPSC_411_HW2/app/src/main/res/layout/student_rows.xml
+++ b/CPSC_411_HW2/app/src/main/res/layout/student_rows.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/first_name"
+        android:width="150dp"
+        android:gravity="center_horizontal"/>
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
-
-    <TextView
         android:id="@+id/last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-
+        android:width="140dp"
+        android:gravity="center_horizontal"/>
     <TextView
-        android:id="@+id/cwid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:id="@+id/student_id"
+        android:width="130dp"
+        android:gravity="center_horizontal"/>
 
 </LinearLayout>
