--- a/CPSC_411_HW2/app/src/main/res/layout/course_row.xml
+++ b/CPSC_411_HW2/app/src/main/res/layout/course_row.xml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
-        android:id="@+id/course_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="220dp"
-        android:gravity="center_horizontal"/>
-
+        android:id="@+id/course_name_id"/>
     <TextView
-        android:id="@+id/course_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="220dp"
-        android:gravity="center_horizontal"/>
-
-
+        android:id="@+id/course_grade_id"/>
 
 </LinearLayout>
