--- a/CPSC_411_HW2/app/src/main/res/layout/student_row.xml
+++ b/CPSC_411_HW2/app/src/main/res/layout/student_row.xml
@@ -4,24 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/first_name"
-        android:width="150dp"
-        android:gravity="center_horizontal"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20pt"
+        android:layout_marginRight="30px"/>
+    <TextView
         android:id="@+id/last_name"
-        android:width="140dp"
-        android:gravity="center_horizontal"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/student_id"
-        android:width="130dp"
-        android:gravity="center_horizontal"/>
-
+        android:textSize="20pt"/>
 </LinearLayout>
